--- a/DockingAdminPanel/Views/Shared/Components/MenuSideBar/Default.cshtml
+++ b/DockingAdminPanel/Views/Shared/Components/MenuSideBar/Default.cshtml
@@ -68,7 +68,7 @@
                         <a asp-action="index" asp-controller="LabCategories" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Categories</span> </a>
                         <a asp-action="index" asp-controller="LabItems" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Items</span> </a>
                         <a asp-action="index" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Patients Appointments</span> </a>
-                        <a asp-action="Labindex" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Appointments</span> </a>
+                        <a asp-action="Labindex" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Tests</span> </a>
                         <a asp-action="CollectTestSamples" asp-controller="Patients" class="nav_link"><i class='bx bx-handicap'></i><span class="nav_name">Lab Results</span> </a>
                         <a asp-action="allusers" asp-controller="Account" class="nav_link"> <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span> </a>
                         <a asp-action="PendingItems" asp-controller="Products" class="nav_link"> <i class='bx bx-message-square-detail nav_icon'></i> <span class="nav_name">Messages</span> </a>
