--- a/DockingAdminPanel/Views/Patients/CreateLab.cshtml
+++ b/DockingAdminPanel/Views/Patients/CreateLab.cshtml
@@ -52,9 +52,9 @@
                     <input asp-for="Illness" class="form-control" />
                     <span asp-validation-for="Illness" class="text-danger"></span>
                 </div>
-            @*    <div class="form-group col-md-6">
+                <div class="form-group col-md-6">
                     <label asp-for="DoctorId" class="control-label">Doctor</label>
-                    <select asp-for="DoctorId" class="form-control">
+					<select asp-for="DoctorId" class="form-control" id="doctorDropdown">
                         <option value="">Select a Doctor</option>
 						@if (Model.Doctors.Count() > 0 && Model.Doctors !=null)
                         {
@@ -64,17 +64,16 @@
                             }
                         }
                     </select>
-					@if (Model.Doctors.Count() > 0 && Model.Doctors !=null)
-                        {
+				 
 					<span asp-validation-for="DoctorId" class="text-danger"></span>
-						}
-                </div>*@
+						 
+                </div>
             </div>
             <div class="form-group">
                 <label class="control-label"></label>
                 <div class="form-check">
                     <label class="form-check-label">
-                        <input class="form-check-input" asp-for="External" /> External
+						<input class="form-check-input" asp-for="External" id="externalCheckbox" /> External
                     </label>
                 </div>
             </div>
@@ -118,6 +117,19 @@
 		$("#addpatientappointment").submit();
 
 	}
+	function toggleDoctorDropdown() {
+		var externalCheckbox = document.getElementById('externalCheckbox');
+		var doctorDropdown = document.getElementById('doctorDropdown');
+
+		// If the checkbox is checked, disable the doctor dropdown; otherwise, enable it
+		doctorDropdown.disabled = externalCheckbox.checked;
+	}
+
+	// Attach the toggleDoctorDropdown function to the change event of the "External" checkbox
+	document.getElementById('externalCheckbox').addEventListener('change', toggleDoctorDropdown);
+
+	// Call the function on page load to set the initial state
+	toggleDoctorDropdown();
 </script>
 <style>
 	@@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap');
