--- a/DockingAdminPanel/Views/Patients/SampleCollection.cshtml
+++ b/DockingAdminPanel/Views/Patients/SampleCollection.cshtml
@@ -235,18 +235,18 @@
 					</div>
 
 
-				<footer class="row">
-					<div class="col-lg-4 col-sm-5">
+				<footer class="row" style="margin-top: 400px;">
+					<div class="col-lg-4 col-sm-4">
 					</div>
 
-					<div class="col-lg-4 col-sm-5 ml-auto">
-						<table class="table table-clear">
+					<div class="col-lg-4 col-sm-8 ml-auto">
+						<table class="table table-clear text-left">
 							<tbody>
 
 
 
 								<tr>
-									<td class="left">
+									<td>
 										<strong>Charge Technician:@User.Identity.Name</strong>
 									</td>
 
@@ -259,6 +259,7 @@
 				</footer>
 
 			</div>
+				<h2> This is the end of print preview.</h2>
 		</div>
 	</div>
 				`;
@@ -425,4 +426,5 @@
 			-moz-box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
 			box-shadow: 0px 0px 20px rgba(0, 0, 0, .1);
 		}
+
 </style>
