--- a/DockingAdminPanel/Views/Patients/Index.cshtml
+++ b/DockingAdminPanel/Views/Patients/Index.cshtml
@@ -346,7 +346,7 @@
         </center><!--End InvoiceTop-->
 
         <div id="mid">
-          <div class="info">
+          <div class="info text-center">
             <p>
                 Address : Rajjar charsadda, kpk 24420</br>
                 Email   : ahmad@gmail.com</br>
@@ -357,60 +357,58 @@
 
         <div id="bot">
 
-                        <div id="table">
-                            <table>
-                                <tr class="tabletitle">
-                                    <td class="item"><h2>Item</h2></td>
-                                   
-                                    <td class="Rate"><h2>Sub Total</h2></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Communication</p></td>
-                                    <td class="tableitem"><p class="itemtext">5</p></td>
-                                    <td class="tableitem"><p class="itemtext">$375.00</p></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Asset Gathering</p></td>
-                                    <td class="tableitem"><p class="itemtext">3</p></td>
-                                    <td class="tableitem"><p class="itemtext">$225.00</p></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Design Development</p></td>
-                                    <td class="tableitem"><p class="itemtext">5</p></td>
-                                    <td class="tableitem"><p class="itemtext">$375.00</p></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Animation</p></td>
-                                    <td class="tableitem"><p class="itemtext">20</p></td>
-                                    <td class="tableitem"><p class="itemtext">$1500.00</p></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Animation Revisions</p></td>
-                                    <td class="tableitem"><p class="itemtext">10</p></td>
-                                    <td class="tableitem"><p class="itemtext">$750.00</p></td>
-                                </tr>
+                <div class="container"> 
 
 
-                                <tr class="tabletitle">
-                                    <td></td>
-                                    <td class="Rate"><h2>tax</h2></td>
-                                    <td class="payment"><h2>$419.25</h2></td>
-                                </tr>
+                             <div class="row my-2 mx-1 justify-content-center">
+          <table class="table table-striped table-borderless information-table">
+            <thead style="background-color:#84B0CA ;" class="text-white">
+              <tr>
+            
+                <th scope="col">Description</th>
+                <th scope="col">Qty</th>
+                <th scope="col">Unit Price</th>
+              
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+               
+                <td>Pro Package</td>
+                <td>4</td>
+                <td>$200</td>
+               
+              </tr>
+              <tr>
+             
+                <td>Web hosting</td>
+                <td>1</td>
+                <td>$10</td>
+                
+              </tr>
+              <tr>
+               
+                <td>Consulting</td>
+                <td>1</td>
+                <td>$300</td>
+            
+              </tr>
+            </tbody>
 
-                                <tr class="tabletitle">
-                                    <td></td>
-                                    <td class="Rate"><h2>Total</h2></td>
-                                    <td class="payment"><h2>$3,644.25</h2></td>
-                                </tr>
+          </table>
+        </div>
+        
 
-                            </table>
-                        </div><!--End Table-->
-
+         <div class="row">
+          <div class="col-xl-3 text-end">
+            <ul class="list-unstyled">
+              <li class="text-muted ms-3"><span class="text-black me-4">SubTotal</span>$1110</li>
+              <li class="text-muted ms-3 mt-2"><span class="text-black me-4">Tax(15%)</span>$111</li>
+            </ul>
+            <p class="text-black"><span class="text-black me-3"> Total Amount</span><span
+                style="font-size: 25px;">$1221</span></p>
+          </div>
+        </div>   
                        
 
                     </div><!--End InvoiceBot-->
