--- a/DockingAdminPanel/Views/Patients/Index.cshtml
+++ b/DockingAdminPanel/Views/Patients/Index.cshtml
@@ -249,172 +249,43 @@
 
     var printContent = `
 
-            <style type="text/css">
-        #invoice-POS{
-           font-family: Arial, sans-serif;
-      padding:0mm;
-      margin: 0 auto;
-      width: 88mm;
-      background: #FFF;
 
+      <div style="font-family: Arial, sans-serif; margin: 0; padding: 10px;">
 
-    ::selection {background: #f31544; color: #FFF;}
-    ::moz-selection {background: #f31544; color: #FFF;}
-    h1{
-      font-size: 1.5em;
-      color: #222;
-    }
-    h2{font-size: .9em;}
-    h3{
-      font-size: 1.2em;
-      font-weight: 300;
-      line-height: 2em;
-    }
-    p{
-      font-size: .7em;
-      color: #666;
-      line-height: 1.2em;
-    }
+      <table style="width: 100%; border-collapse: collapse;">
+        <tr>
+          <td colspan="2" style="text-align: center; font-size: 1.2em; font-weight: bold;">
+            <p>Company Name</p>
+            <p>Address Line 1</p>
+            <p>Address Line 2</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" style="height: 10px;"></td> <!-- Spacer row -->
+        </tr>
+        <tr>
+          <td style="width: 70%;">Product</td>
+          <td style="width: 30%; text-align: right;">Price</td>
+        </tr>
+        <tr>
+          <td style="border-bottom: 1px solid #000;">Product 1</td>
+          <td style="border-bottom: 1px solid #000; text-align: right;">$10.00</td>
+        </tr>
+        <tr>
+          <td style="border-bottom: 1px solid #000;">Product 2</td>
+          <td style="border-bottom: 1px solid #000; text-align: right;">$15.00</td>
+        </tr>
+        <!-- Add more rows for additional items -->
+      </table>
 
-    #top, #mid,#bot{ /* Targets all id with 'col-' */
-      border-bottom: 1px solid #EEE;
-    }
+      <div style="margin-top: 10px; text-align: center; font-size: 0.8em;">
+        <p>Thank you for your business!</p>
+      </div>
 
-    #top{min-height: 100px;}
-    #mid{min-height: 80px;}
-    #bot{ min-height: 50px;}
+    </div>
 
-    #top .logo{
-      //float: left;
-        height: 60px;
-        width: 60px;
-        background: url(http://michaeltruong.ca/images/logo1.png) no-repeat;
-        background-size: 60px 60px;
-    }
-    .clientlogo{
-      float: left;
-        height: 60px;
-        width: 60px;
-        background: url(http://michaeltruong.ca/images/client.jpg) no-repeat;
-        background-size: 60px 60px;
-      border-radius: 50px;
-    }
-    .info{
-      display: block;
-      //float:left;
-      margin-left: 0;
-    }
-    .title{
-      float: right;
-    }
-    .title p{text-align: right;}
-    table{
-      width: 100%;
-      border-collapse: collapse;
-    }
-    td{
-      //padding: 5px 0 5px 15px;
-      //border: 1px solid #EEE
-    }
-    .tabletitle{
-      //padding: 5px;
-      font-size: .5em;
-      background: #EEE;
-    }
-    .service{border-bottom: 1px solid #EEE;}
-    .item{width: 24mm;}
-    .itemtext{font-size: .5em;}
-
-    #legalcopy{
-      margin-top: 5mm;
-    }
-
-
-
-    }
-    </style>
-
-    <!-- Header -->
-
-      <div id="invoice-POS">
-
-        <center id="top">
-          <div class="logo"></div>
-          <div class="info">
-            <h2>A+ Clinics</h2>
-          </div><!--End Info-->
-        </center><!--End InvoiceTop-->
-
-        <div id="mid">
-          <div class="info">
-            <p>
-                Address : Rajjar charsadda, kpk 24420</br>
-                Email   : ahmad@gmail.com</br>
-                Phone   : 555-555-5555</br>
-            </p>
-          </div>
-        </div><!--End Invoice Mid-->
-
-        <div id="bot">
-
-                        <div id="table">
-                            <table>
-                                <tr class="tabletitle">
-                                    <td class="item"><h2>Item</h2></td>
-                                   
-                                    <td class="Rate"><h2>Sub Total</h2></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Communication</p></td>
-                                    <td class="tableitem"><p class="itemtext">5</p></td>
-                                    <td class="tableitem"><p class="itemtext">$375.00</p></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Asset Gathering</p></td>
-                                    <td class="tableitem"><p class="itemtext">3</p></td>
-                                    <td class="tableitem"><p class="itemtext">$225.00</p></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Design Development</p></td>
-                                    <td class="tableitem"><p class="itemtext">5</p></td>
-                                    <td class="tableitem"><p class="itemtext">$375.00</p></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Animation</p></td>
-                                    <td class="tableitem"><p class="itemtext">20</p></td>
-                                    <td class="tableitem"><p class="itemtext">$1500.00</p></td>
-                                </tr>
-
-                                <tr class="service">
-                                    <td class="tableitem"><p class="itemtext">Animation Revisions</p></td>
-                                    <td class="tableitem"><p class="itemtext">10</p></td>
-                                    <td class="tableitem"><p class="itemtext">$750.00</p></td>
-                                </tr>
-
-
-                                <tr class="tabletitle">
-                                    <td></td>
-                                    <td class="Rate"><h2>tax</h2></td>
-                                    <td class="payment"><h2>$419.25</h2></td>
-                                </tr>
-
-                                <tr class="tabletitle">
-                                    <td></td>
-                                    <td class="Rate"><h2>Total</h2></td>
-                                    <td class="payment"><h2>$3,644.25</h2></td>
-                                </tr>
-
-                            </table>
-                        </div><!--End Table-->
-
-                       
-
-                    </div><!--End InvoiceBot-->
-      </div><!--End Invoice-->
+   
+   
 
     `;
 
