--- a/DockingAdminPanel/Views/Patients/CollectTestSamples.cshtml
+++ b/DockingAdminPanel/Views/Patients/CollectTestSamples.cshtml
@@ -45,7 +45,7 @@
 							<tr>
 								<td>@item.FullName</td>
 
-								<td><a asp-action="SampleCollection" class="btn btn-primary" asp-route-id="@item.Id">Collect Specimen</a> </td>
+								<td><a asp-action="SampleCollection" class="btn btn-primary" asp-route-id="@item.Id"><i class="fa-solid fa-circle-plus"></i> Collect Specimen</a> </td>
 							</tr>
 
 						}
