--- a/DockingAdminPanel/Views/Patients/SampleCollection.cshtml
+++ b/DockingAdminPanel/Views/Patients/SampleCollection.cshtml
@@ -73,9 +73,9 @@
 								<td>@item.TestResult</td>
 								<td>@(item.NormalValue)</td>
 							<td>
-									<button class="btn btn-primary" onclick="printReceipt()">Print Table</button>
-									<a asp-action="AddSampleCollection" class="btn btn-primary" asp-route-id="@item.Id">Collect Sample</a> |
-									<a asp-action="AddTestResult" class="btn btn-danger" asp-route-id="@item.Id">Upload Result</a> |
+									<button class="btn btn-primary" onclick="printReceipt()"><i class="fa-solid fa-print"></i> Print Table</button>
+									<a asp-action="AddSampleCollection" class="btn btn-primary" asp-route-id="@item.Id"><i class="fa-solid fa-circle-plus"></i> Collect Sample</a> |
+									<a asp-action="AddTestResult" class="btn btn-danger" asp-route-id="@item.Id"><i class="fa-solid fa-upload"></i> Upload Result</a> |
 								 
  
 							</td>
