--- a/DockingAdminPanel/Views/Shared/_Layout.cshtml
+++ b/DockingAdminPanel/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
                                 <link href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css' rel='stylesheet'>
                                 <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" type="text/css" />
     <script type='text/javascript' src='https://code.jquery.com/jquery-3.5.1.js'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
                                 
                                 <style>::-webkit-scrollbar {
                                   width: 8px;
