--- a/DockingAdminPanel/Views/Doctors/Index.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Index.cshtml
@@ -86,10 +86,10 @@
             <td>
                                 @Html.DisplayFor(modelItem => item.DoctorFee)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td class="text-end w-25">
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-seconday"><i class="fa-regular fa-pen-to-square"></i>  Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-success"><i class="fa-solid fa-circle-info"></i> Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i> Delete</a>
             </td>
         </tr>
 }
@@ -106,3 +106,22 @@
         $('#myTable').DataTable();
     });
 </script>
+
+<style>
+     .btn-secondary:hover{
+        background: transparent !important;
+        color: #6c757d !important;
+    }
+
+    .btn-success:hover{
+        background: transparent !important;
+        color: #28a745 !important;
+    }
+
+    .btn-danger:hover{
+        background: transparent !important;
+        color: #dc3545 !important;
+    }
+
+
+</style>
