--- a/DockingAdminPanel/Views/PatientTokens/Index.cshtml
+++ b/DockingAdminPanel/Views/PatientTokens/Index.cshtml
@@ -4,11 +4,37 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="row pt-2">
+    <div class="col-md-6">
+        <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+        <p>
+            <a asp-action="Create" class="btn btn-primary"><i class="fa-solid fa-circle-plus"></i> Create New</a>
+        </p>
+    </div>
+
+    
+        
+      <div class='col-xs-12 col-sm-12 col-md-4 col-lg-4'>
+
+        <form class='navbar-form'>
+          <div class='input-group'>
+            <input class='form-control' type='text' name='search' placeholder='Search' />
+            <span class="input-group-btn">
+               <button type='submit' class='btn btn-default w-100 h-100'>
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
+            </span>
+
+          </div>
+        </form>
+
+      </div>
+
+
+</div>
+
+
 <table class="table">
     <thead>
         <tr>
@@ -46,3 +72,29 @@
         </tr>
     </tbody>
 </table>
+
+<style>
+     .input-group-btn {
+        border:1px solid #ced4da; 
+        border-top-right-radius: 16px; 
+        border-bottom-right-radius: 16px;
+    }
+
+    .btn-default {
+         border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 16px;
+        border-bottom-right-radius: 16px;
+    }
+
+    .btn-default:hover{
+        background: #C9D6FF;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 16px;
+        border-bottom-right-radius: 16px;
+        border: 1px solid #C9D6FF;
+    }    
+
+
+</style>
