--- a/DockingAdminPanel/Views/Doctors/Index.cshtml
+++ b/DockingAdminPanel/Views/Doctors/Index.cshtml
@@ -84,7 +84,7 @@
             </td>
            
             <td>
-                                @Html.DisplayFor(modelItem => item.DoctorFee)
+                                @Html.DisplayFor(modelItem => item.TotalFee)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
