--- a/DockingAdminPanel/Views/Patients/Index.cshtml
+++ b/DockingAdminPanel/Views/Patients/Index.cshtml
@@ -19,7 +19,7 @@
         <div class="table-responsive">
             <table id="myTable" class="display">
     <thead>
-        <tr>
+        <tr><th>Doctor</th>
             <th>Status</th>
                         <th>
                             Token Number
@@ -70,9 +70,23 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) 
-{
-                        <tr data-fullname="@item.FullName" data-fee="@item.Fee" data-token="@item.TokenNumber">
+
+                        @foreach (var item in Model)
+                        {
+                            var doctorName = "Unknown";
+                            var doctorFee = 0.0;
+
+                            // Find the doctor associated with the patient
+                            var associatedDoctor = item.Doctors.FirstOrDefault(doc => doc.Id == item.DoctorId);
+
+                            if (associatedDoctor != null)
+                            {
+                                doctorName = associatedDoctor.FullName;
+                                doctorFee = associatedDoctor.TotalFee;
+                            }
+
+                            <tr data-fullname="@item.FullName" data-age="@item.Age" data-sex="@item.Sex" data-fee="@doctorFee" data-doctor="@doctorName"data-token="@item.TokenNumber">
+                                <td>@doctorName</td>
                             <td style=@(item.PaymentStatus==true?"background-color:green":"background-color:red")>
                 @(item.PaymentStatus==true?"Paid":"UnPaid")
             </td>
@@ -105,7 +119,7 @@
             </td>
             
             <td>
-                                <a onclick="printReceipt('@item')" class="btn btn-success" style="background-color:#fcbf49">Pay</a>
+                                <a onclick="printReceipt(this)" class="btn btn-success" style="background-color:#fcbf49">Pay</a>
                 <a asp-action="AddTestsAppointments" class="btn btn-outline-primary" asp-route-id="@item.Id">Add Tests</a> |
                                 <a asp-action="Edit" class="btn btn-outline-secondary" asp-route-id="@item.Id">Edit</a> |
                                 <a asp-action="Details" class="btn btn-outline-warning" asp-route-id="@item.Id">Details</a> |
@@ -234,75 +248,210 @@
 //    document.body.innerHTML = originalContent;
 //}
 
- function printReceipt(item) {
-        var tr = findClosestTableRow(item); // Find the parent tr element
-        if (!tr) {
-            console.error("Could not find the closest table row.");
-            return;
-        }
-    //var tr = element.closest('tr'); // Find the parent tr element
-    var fullname = tr.getAttribute('data-fullname');
-    var fee = tr.getAttribute('data-fee');
-    var token = tr.getAttribute('data-token');
+    function printReceipt(item) {
+        var tr = item.closest('tr');
+        var doctorName = tr.getAttribute('data-doctor');
+        var doctorFee = tr.getAttribute('data-fee');
+        console.log(doctorName)
+        //var tr = element.closest('tr'); // Find the parent tr element
+        var fullname = tr.getAttribute('data-fullname');
+        var fee = tr.getAttribute('data-fee');
+        var token = tr.getAttribute('data-token');
+        var age = tr.getAttribute('data-age');
+        var sex = tr.getAttribute('data-sex');
+        var doctor = tr.getAttribute('data-doctor');
+        console.log(fullname)
 
-   
+        var printContent = `
+                    <style type="text/css">
+            #invoice-POS {
+                font-family: Helvetica, Arial, sans-serif;
+                padding: 0;
+                margin: 0 auto;
+                width: 88mm;
+                background: #FFF;
+            }
 
-    var printContent = `
+            h1, h2, h3, p {
+                margin: 0;
+                padding: 0;
+            }
+
+            #top, #mid, #bot {
+                border-bottom: 1px solid #EEE;
+            }
+
+            #top {
+                min-height: 20px;
+            }
+
+            #mid {
+                min-height: 80px;
+            }
+
+            #bot {
+                min-height: 50px;
+            }
+
+            .info {
+                display: block;
+                margin-left: 0;
+            }
+
+            table {
+                width: 100%;
+                border-collapse: collapse;
+            }
+
+            td {
+                padding: 5px;
+                border: 2px solid #000;
+                background: #FFF;
+                color: #000; /* Change text color to black */
+            }
+
+            .tabletitle {
+                font-size: .5em;
+                background: #EEE;
+            }
+
+            .service {
+                border-bottom: 1px solid #EEE;
+            }
+
+            .item {
+                width: 24mm;
+            }
+
+            .itemtext {
+                font-size: .5em;
+            }
+
+            #legalcopy {
+                margin-top: 5mm;
+            }
+
+            .container {
+                margin: 0;
+            }
+
+            .row {
+                margin: 0;
+            }
+
+            .col-xl-3 {
+                margin-top: 10px;
+                display: flex;
+                justify-content: end;
+            }
+
+            /* Change text color for thead */
+            .information-table thead {
+
+                font-size: 18px;
+            }
+        </style>
+
+        <!-- Header -->
+        <div id="invoice-POS">
+            <center id="top">
+                <div class="logo"></div>
+                <div class="info">
+                    <h1>A+ Clinics</h1>
+                </div>
+            </center>
+            <!-- End InvoiceTop -->
+
+            <div id="mid">
+                <div class="info text-center text-dark">
+                    <p>
+                           Royal Tower,Near Allied CNG,<br>Tangi Road,Rajjar Charsadda<br>
+                         
+                        Phone   : 0314-1504216<br>
+                            <strong class="float-right">@DateTime.Now</strong>
+                    </p>
+                </div>
+                <table class="information-table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Patient</th>
+                                 <th scope="col">Age</th>
+                                      <th scope="col">sex</th>
+                                           <th scope="col">Token</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                      ${fullname.toUpperCase()}
 
 
-      <div style="font-family: Arial, sans-serif; margin: 0; padding: 10px;">
+                            </td>
+                                <td>${age}
 
-      <table style="width: 100%; border-collapse: collapse;">
-        <tr>
-          <td colspan="2" style="text-align: center; font-size: 1.2em; font-weight: bold;">
-            <p>Company Name</p>
-            <p>Address Line 1</p>
-            <p>Address Line 2</p>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2" style="height: 10px;"></td> <!-- Spacer row -->
-        </tr>
-        <tr>
-          <td style="width: 70%;">Product</td>
-          <td style="width: 30%; text-align: right;">Price</td>
-        </tr>
-        <tr>
-          <td style="border-bottom: 1px solid #000;">Product 1</td>
-          <td style="border-bottom: 1px solid #000; text-align: right;">$10.00</td>
-        </tr>
-        <tr>
-          <td style="border-bottom: 1px solid #000;">Product 2</td>
-          <td style="border-bottom: 1px solid #000; text-align: right;">$15.00</td>
-        </tr>
-        <!-- Add more rows for additional items -->
-      </table>
+                                                    <td>
+                                                ${sex}</td>
+                                <td>     ${token}100</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- End Invoice Mid -->
 
-      <div style="margin-top: 10px; text-align: center; font-size: 0.8em;">
-        <p>Thank you for your business!</p>
-      </div>
+            <div id="bot">
+                <div class="">
+                    <div class="">
+                        <table class="information-table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Doctor Name</th>
+                                    <th scope="col">Fee</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                        <td>${doctor}</td>
+                                    <td>${fee}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="">
+                        <div class="">
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            SubTotal: <br>
+                                            Tax(15%): <br>
+                                                Total Amount:${fee}
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End InvoiceBot -->
+        </div>
 
-    </div>
+            `;
 
-   
-   
+        var originalContent = document.body.innerHTML;
+        document.body.innerHTML = printContent;
 
-    `;
+        // Apply CSS styles to the receipt content
+        var style = document.createElement('style');
 
-    var originalContent = document.body.innerHTML;
-    document.body.innerHTML = printContent;
+        document.head.appendChild(style);
 
-    // Apply CSS styles to the receipt content
-    var style = document.createElement('style');
-      
-    document.head.appendChild(style);
+        // Print the content
+        window.print();
 
-    // Print the content
-        window.print( );
-
-    // Restore the original content
-    document.body.innerHTML = originalContent;
-}
+        // Restore the original content
+        document.body.innerHTML = originalContent;
+    }
 
     function findClosestTableRow(item) {
         // Find the closest <tr> element by navigating up the DOM hierarchy from the button
