--- a/DockingAdminPanel/Views/Patients/SampleCollection.cshtml
+++ b/DockingAdminPanel/Views/Patients/SampleCollection.cshtml
@@ -134,8 +134,7 @@
 	 <div class="container">
 		<div class="card">
 			<div class="card-header">
-				A+ Clinics
-				<strong class="float-right">@DateTime.Now</strong>
+					<strong>A+ Clinics</strong>
 
 
 			</div>
@@ -144,7 +143,7 @@
 					<div class="col-sm-6">
 
 						<div>
-							<strong>A+ Clinics</strong>
+							
 						</div>
 						<div>Rajjar</div>
 						<div>Charsadda, Kpk</div>
@@ -181,8 +180,10 @@
 		@item.Id
 	},
 							</div>
+									<div>Phone:  @Model.patient.PhoneNumber</div>
 						<div>Ordered On: @Model.patient.AddedDate</div>
-						<div>Phone:  @Model.patient.PhoneNumber</div>
+					
+								<div>Result Time:<strong class="float-right">@DateTime.Now</strong></div>
 					</div>
 
 
